# astral-ai

./: README.md  pyproject.toml
scripts/: subclass_pydantic.py
src/astral_ai/: __init__.py  _auth.py  _decorators.py  _models.py  _providersMOVE.py  exceptions.py  logger.py
src/astral_ai/_types/: __init__.py  _astral.py  _base.py  _request.py  _response.py  _usage.py
src/astral_ai/_types/_request/: __init__.py  _request.py
src/astral_ai/_types/_response/: __init__.py  _response.py  _usage.py
src/astral_ai/config/: config.py  models.yaml  providers.yaml
src/astral_ai/constants/: _costs.py  _models.py  _supported_models.py
src/astral_ai/errors/: error_decorators.py  error_formatter.py  exceptions.py  model_support_exceptions.py
src/astral_ai/messaging/: __init__.py  _message_utils.py  _models.py  _utils.py
src/astral_ai/providers/: _adapters.py  _base_adapters.py  _base_client.py  _client_registry.py  _generics.py  _mappings.py  _messagesMOVE.py  _types.py  _usage.py  base.py
src/astral_ai/resources/: _base_resource.py  completions.py
src/astral_ai/tests/: test_structured_output.py
src/astral_ai/tools/: tool.py
src/astral_ai/tracing/: _cost_strategies.py  _cost_utils.py
src/astral_ai/utilities/: __init__.py  cost_utils.py  model_utils.py
src/scripts/: generate_models.py
tests/_types/: test_request.py  test_response.py
tests/integration/resources/: test_completions.py
tests/messaging/: test_models.py  test_utils.py
tests/providers/: test_base_client.py
tests/providers/deepseek/: test_client.py
tests/tracing/: test_cost_utils.py
(+30 files in other folders)
